tests/types/errors/effects_unknown_label.err
1. error[T064]: unknown effect label `quantum`
  --> tests/types/errors/effects_unknown_label.mochi:3:1

  3 | fun broken() ! quantum {
    | ^

help:
  Effect annotations may only mention the closed label set: io, fs, net, time, meta.
